test/fail/M0127.mo
actor {
  system func preupgrade(foo : Bool) {}
}
